cabal-version: 2.2
name:          ghc-lib-reinstallable
version:       0.1.0.0
author:        Test
maintainer:    test@example.com
license:       BSD-3-Clause
build-type:    Simple

library
  exposed-modules:  Lib
  hs-source-dirs:   src
  build-depends:    base >=4.7 && <5
  default-language: Haskell2010

executable ghc-lib-reinstallable
  main-is:          Main.hs
  hs-source-dirs:   app
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , ghc
    , ghc-lib-reinstallable
  default-language: Haskell2010
