cabal-version:       >=1.10
name:                test-ghc-options
version:             0.1.0.0
license:             PublicDomain
author:              Hamish Mackenzie
maintainer:          Hamish.Mackenzie@iohk.io
build-type:          Simple

library
  build-depends:     base >=4.7 && <5
  exposed-modules:   Lib
  hs-source-dirs:    src
  default-language:  Haskell2010

executable test-ghc-options-exe
  main-is:           Main.hs
  build-depends:     base >=4.7 && <5, test-ghc-options
  hs-source-dirs:    app
  if !arch(wasm32)
    ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  default-language:  Haskell2010
