cabal-version:       >=1.10
name:                test-gi-gtk
version:             0.1.0.0
license:             PublicDomain
author:              Hamish Mackenzie
maintainer:          Hamish.K.Mackenzie@gmail.com
build-type:          Simple

executable test-gi-gtk
  build-depends:       base
                     , gi-gtk
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
