cabal-version:       >=1.10
name:                githash-test
version:             0.1.0.0
license:             PublicDomain
author:              Hamish Mackenzie
build-type:          Simple
extra-source-files:  ../../.git/**

executable githash-test
  hs-source-dir:       src
  main-is:             Main.hs
  build-depends:       base >=4.13 && <5,
                       githash
  default-language:    Haskell2010
  build-tools:         git

