cabal-version:       2.4
name:                githash-test
version:             0.1.0.0
license:             MIT
author:              Hamish Mackenzie
build-type:          Simple
extra-source-files:  ../../.git/**/*

executable githash-test
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >=4.12 && <5,
                       githash
  default-language:    Haskell2010
  build-tools:         git

