cabal-version:      3.0
name:               js-template-haskell
version:            0.1.0.0
category:           Repro
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base
                    , uri-bytestring
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: test/Main.hs
  build-depends: base, js-template-haskell
