cabal-version:      3.0
name:               literate-haskell
version:            0.1.0.0
category:           Repro
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010

