cabal-version:      3.4
name:               test
version:            0.1.0.0
build-type:         Simple

library
    exposed-modules:  MyLib
    build-depends:    base, polysemy, polysemy-plugin
    ghc-options:      -Wall -fplugin=Polysemy.Plugin
    hs-source-dirs:   src
    default-language: Haskell2010
