cabal-version:       >=1.10
name:                src-loc
version:             0.1.0.0
license:             PublicDomain
author:              Hamish Mackenzie
maintainer:          Hamish.K.Mackenzie@gmail.com
build-type:          Simple

executable src-loc
  build-depends:       base, ghc
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
